--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,62 +1,46 @@
-name: API and Web Automation Workflow
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-
-# EVENT
+name: API Automation Workflow
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  # Manually running a workflow  
+    
   workflow_dispatch:
-
 jobs:
-  run-automation-test:
-    # Running on Virtual machine
+  api-automation-test:
     runs-on: ubuntu-latest
 
-
     steps:
-    # download repo
-    - uses: actions/checkout@v4
-
-    # set up java
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - uses: actions
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '11'
         distribution: 'temurin'
-        
-    # install browser
-    - name: Setup Chrome
-      uses: browser-actions/setup-chrome@v1.7.2
-
-    #set up gradlew
-    - name: Setup gradlew
+      
+    - name: setup gradle
       run: chmod +x gradlew
-      
-    # Execute gradle command for running cucumber test
+
     - name: Execute Test
-      run: ./gradlew apiTest || true
+      run: ./gradlew apiTest
       
-    # || true:  Operator logika ini memastikan bahwa jika perintah di sebelah kiri gagal (mengembalikan status kode bukan nol)
-    #           perintah di sebelah kanan (true) akan dieksekusi, yang selalu berhasil. Dengan demikian, status keseluruhan dari perintah akan dianggap berhasil. 
-    #           Ini berguna dalam konteks CI untuk menghindari penghentian pipeline karena kegagalan tes sementara.
-
-
-    # Upload Artifact Report
     - name: Archive Test Result
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: Cucumber Report
         path: reports/api
-
         
-   # # Deploy to Github Pages
-   #  - name: Deploy report to Github Pages
-   #    if: always()
-   #    uses: peaceiris/actions-gh-pages@v3.7.3
-   #    with:
-   #     PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-   #     PUBLISH_DIR: reports/api
+#     name: Deploy report to github pages
+#     if: always()
+#     uses: peaceiris/actions-gh-pages@v4
+#     with:
+#     personal_token: ${{ secrets.GITHUB_TOKEN }}
+#     publish_dir: reports/api
